<resources>
    <string name="app_name">Top-Github</string>
    <string name="subhead">subhead</string>
    <string name="ok">Ok</string>
    <string name="alert">Alert</string>
    <string name="something_went_wrong">Something went wrong. Please try again</string>
    <string name="please_wait">please wait…</string>
    <string name="git_details">Git Details</string>
    <string name="repo_details">Repo Details</string>
    <string name="trans_user_image">User Image</string>
    <string name="trans_user_name">trans_username</string>
    <string name="trans_name">trans_name</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="url">Url</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="github_list">GitHub List</string>
    <string name="connection_is_required">Connection is required. Check your internet connection,then try again</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="try_again">Try Again</string>
    <string name="cancel">Cancel</string>
    <string name="github_details">GitHub Details</string>
</resources>
