<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:paddingBottom="@dimen/margin5x3"

    >

    <TextView
        android:id="@+id/choose_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorBackground"
        android:drawableStart="@drawable/ic_network_issue"
        android:drawablePadding="@dimen/margin5x2"
        android:paddingStart="@dimen/margin5x2"
        android:paddingTop="@dimen/margin5x3"
        android:paddingBottom="@dimen/margin5x3"
        android:text="@string/no_internet_connection"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/titleDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/divider_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_options" />

    <TextView
        android:id="@+id/camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/margin5x2"
        android:gravity="center_vertical"
        android:padding="@dimen/margin5x4"
        android:text="@string/connection_is_required"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleDivider" />

    <Button
        android:id="@+id/tryAgain"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin5x3"
        android:paddingStart="@dimen/margin5x3"
        android:paddingEnd="@dimen/margin5x3"
        android:text="@string/try_again"
        android:textAllCaps="@bool/show"

        android:textColor="@color/green"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin5x3"
        android:paddingStart="@dimen/margin5x3"
        android:paddingEnd="@dimen/margin5x3"
        android:text="@string/cancel"
        android:textAllCaps="@bool/show"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/tryAgain"
        app:layout_constraintTop_toBottomOf="@+id/camera" />
</androidx.constraintlayout.widget.ConstraintLayout>