<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <include layout="@layout/heading_layout" />

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"

        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_user"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:transitionName="@string/trans_user_image"
                app:layout_constraintBottom_toTopOf="@+id/txtGitDetails"
                app:layout_constraintDimensionRatio="H,16:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txtGitDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorPrimary"

                android:fontFamily="@font/roboto_bold"
                android:gravity="center_horizontal"
                android:text="@string/git_details"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/txtUsername"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_user" />

            <TextView
                android:id="@+id/txtUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/colorPrimaryTextDefaultMaterialLight"
                android:transitionName="@string/trans_user_name"
                app:layout_constraintBottom_toTopOf="@+id/txtName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtGitDetails" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorSecondaryTextDefaultMaterialLight"
                android:transitionName="@string/trans_name"
                app:layout_constraintBottom_toTopOf="@+id/txtGitUrl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtUsername" />

            <TextView
                android:id="@+id/txtGitUrl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorSecondaryTextDefaultMaterialLight"
                app:layout_constraintBottom_toTopOf="@+id/txtGitRepositoryDetails"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtName"

                />

            <TextView
                android:id="@+id/txtGitRepositoryDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center_horizontal"
                android:text="@string/repo_details"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/txtRepoName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtGitUrl" />

            <TextView
                android:id="@+id/txtRepoName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/app_name"

                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/colorPrimaryTextDefaultMaterialLight"
                app:layout_constraintBottom_toTopOf="@+id/txtGitRepoUrl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtGitRepositoryDetails" />

            <TextView
                android:id="@+id/txtGitRepoUrl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/app_name"

                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorSecondaryTextDefaultMaterialLight"
                app:layout_constraintBottom_toTopOf="@+id/txtGitRepoDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRepoName" />

            <TextView
                android:id="@+id/txtGitRepoDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorSecondaryTextDefaultMaterialLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtGitRepoUrl" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>